--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
 </head>
 
 <body>
-    <section class="home d-flex flex-column justify-content-center align-items-center">
-        <img src="images/Logo.png" class="mx-auto mb-4 d-block" width="170" alt="">
+    <section class="home d-flex flex-column justify-content-center align-items-center px-2 px-md-0 pt-5">
+        <img src="images/Logo.png" class="logo mx-auto my-5 d-block" width="" alt="">
         <hr>
-        <div class="redes d-flex justify-content-around align-items-center">
+        <div class="redes d-flex justify-content-around align-items-center my-3">
             <img src="images/Whatsapp.svg" alt="">
             <img src="images/Phone.svg" alt="">
             <img src="images/Mail.svg" alt="">
             <img src="images/Instagram.svg" alt="">
         </div>
-        <h3>30 AÑOS DE EXPERIENCIA NOS AVALAN</h3>
+        <p>30 AÑOS DE EXPERIENCIA NOS AVALAN</p>
     </section>
     <section class="precios">
-        <h3>LISTA DE PRECIOS</h3>
+        <h3 class="text-center my-4">LISTA DE PRECIOS</h3>
         <div class="row">
             <div class="col-6">
                 <div class="">
                     <h4>PROTESIS FIJA</h4>
-                    <ul>
+                    <ul class="mb-0">
                         <li> Incrustación $250</li>
                         <li> Corona total $280</li>
                     </ul>
-                    <p>(Otro o albacast metal adicional)</p>
+                    <p class="mb-0">(Otro o albacast metal adicional)</p>
                 </div>
                 <div class="">
                     <h4>PROTESIS REMOVIBLE</h4>
@@ -50,7 +50,7 @@
                     <h4>ORTODONCIA</h4>
                     <ul>
                         <li> Placa Howley $350</li>
-                        <p>(Sin tornillo)</p>
+                        <p class="mb-0">(Sin tornillo)</p>
                         <li> Guarda nocturna $350</li>
                     </ul>
                 </div>
@@ -95,6 +95,11 @@
     </section>
 
     <section class="servicios">
+        <div class="px-2">
+            <hr class="mx-auto my-4">
+        </div>
+        <p class="text-center mb-0">GARANTIZAMOS CALIDAD EN EL MATERIAL</p>
+        <p class="text-center">¡CONTÁCTENOS!</p>
         <div class="d-flex justify-content-center align-items-center">
             <img src="images/Insta_1.png" class="img-fluid" alt="">
             <img src="images/Insta_2.png" class="img-fluid mx-2" alt="">
@@ -102,8 +107,29 @@
         </div>
     </section>
 
-    <footer>
-        <img src="images/Img_footer.jpg" class="img-fluid" alt="">
+    <footer class="mt-5">
+        <div class="contact">
+            <div class="item mb-3">
+                <a href=""><img src="images/Instagram.svg" alt=""></a>
+                <a href="">@magnodent_lab</a>
+            </div>
+            <div class="item">
+                <a href=""><img src="images/Whatsapp.svg" alt=""></a>
+                <a href="">55 2957 6344</a>
+            </div>
+            <div class="item my-3">
+                <a href=""><img src="images/Phone.svg" alt=""></a>
+                <a href="">(+52)55 7262 9721</a>
+            </div>
+            <div class="item">
+                <a href=""><img src="images/Mail.svg" alt=""></a>
+                <a href="">magnodent@yahoo.com.mx</a>
+            </div>
+        </div>
+        <div class="firma">
+            <p>P.D. MIGUEL ANGEL SÁNCHEZ CASTILLO</p>
+        </div>
+        <!-- <img src="images/Img_footer.jpg" class="img-fluid" alt=""> -->
     </footer>
 
     <!-- Optional JavaScript -->
