--- a/index.html
+++ b/index.html
@@ -20,75 +20,79 @@
         <img src="images/Logo.png" class="logo mx-auto my-5 d-block" width="" alt="">
         <hr>
         <div class="redes d-flex justify-content-around align-items-center my-3">
-            <img src="images/Whatsapp.svg" alt="">
-            <img src="images/Phone.svg" alt="">
-            <img src="images/Mail.svg" alt="">
-            <img src="images/Instagram.svg" alt="">
+            <a href=""><img src="images/Whatsapp.svg" alt=""></a>
+            <a href=""><img src="images/Phone.svg" alt=""></a>
+            <a href=""><img src="images/Mail.svg" alt=""></a>
+            <a href=""><img src="images/Instagram.svg" alt=""></a>
         </div>
         <p>30 AÑOS DE EXPERIENCIA NOS AVALAN</p>
     </section>
     <section class="precios">
-        <h3 class="text-center my-4">LISTA DE PRECIOS</h3>
+        <h3 class="text-center my-4 title">LISTA DE PRECIOS</h3>
         <div class="row">
             <div class="col-6">
                 <div class="">
                     <h4>PROTESIS FIJA</h4>
-                    <ul class="mb-0">
-                        <li> Incrustación $250</li>
-                        <li> Corona total $280</li>
-                    </ul>
+                    <div class="item">
+                        <p>Incrustación</p><span>$250</span>
+                        <p>Corona total</p><span>$280</span>
+                    </div>
                     <p class="mb-0">(Otro o albacast metal adicional)</p>
                 </div>
-                <div class="">
+                <div class="mt-3">
                     <h4>PROTESIS REMOVIBLE</h4>
-                    <ul>
-                        <li> Unidad metálica $140</li>
-                        <li> Unidad acrilica $120</li>
-                    </ul>
+                    <div class="item">
+                        <p> Unidad metálica </p><span>$140</span>
+                        <p> Unidad acrilica </p><span>$120</span>
+                    </div>
                 </div>
-                <div class="">
+                <div class="mt-3">
                     <h4>ORTODONCIA</h4>
-                    <ul>
-                        <li> Placa Howley $350</li>
-                        <p class="mb-0">(Sin tornillo)</p>
-                        <li> Guarda nocturna $350</li>
-                    </ul>
+                    <div class="item">
+                        <p> Placa Howley <br> (Sin tornillo)</p><span>$350</span>
+
+                        <p> Guarda nocturna </p><span>$350</span>
+                    </div>
                 </div>
-                <div class="">
+                <div class="mt-3">
                     <h4>PROSTODONCIA</h4>
-                    <ul>
-                        <li> Placa total $1200</li>
-                        <li>Placa total Lucitone $1400</li>
-                        <li> placa con acrilico de alto impacto $350</li>
-                        <li>Rebase $400</li>
-                    </ul>
+                    <div class="item">
+                        <p> Placa total </p><span>$1200</span>
+                        <p>Placa total Lucitone </p><span>$1400</span>
+                        <p>Placa con acrilico de alto impacto </p><span>$350</span>
+                        <p>Rebase </p><span>$400</span>
+                    </div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="">
                     <h4>APARATOS FLEXIBLES</h4>
-                    <ul>
-                        <li>Removible unilateral</li>
-                        <li>Removible bilateral</li>
-                    </ul>
+                    <div class="item">
+                        <p>Removible unilateral</p><span>$850</span>
+                        <p>Removible bilateral</p><span>$1550</span>
+                    </div>
                 </div>
-                <div class="">
+                <div class="mt-3">
                     <h4>ESTÉTICOS</h4>
-                    <ul>
-                        <li>Corona porcelana $$450</li>
-                        <li>Corona libre de metal $1400</li>
-                        <p>(E Max)</p>
-                        <li>Corona con núcleo de zirconia $$1500</li>
-                        <li>Jacket provisional $100</li>
-                        <li>Jacket definitivo $220</li>
-                    </ul>
+                    <div class="item">
+                        <p>Corona porcelana </p><span>$$450</span>
+                        <p>Corona libre de metal </p><span>$1400</span>
+                        <p>(E Max)</p><span></span>
+                        <p>Corona con núcleo de zirconia </p><span>$1500</span>
+                        <p>Jacket provisional </p><span>$100</span>
+                        <p>Jacket definitivo </p><span>$220</span>
+                    </div>
                 </div>
-                <div class="">
+                <div class="mt-3">
                     <h4>RESINA NEXCO</h4>
-                    <ul>
-                        <li>Incrustación $$550</li>
-                        <li>Corona total $650</li>
-                    </ul>
+                    <div class="item">
+                        <p>Incrustación</p><span>$550</span>
+                        <p>Corona total</p><span>$650</span>
+                    </div>
+                </div>
+                <div class="clausulas mt-3">
+                    <p class="text-uppercase mb-2"> * Estos precios no incliuyen iva</p>
+                    <p class="text-uppercase"> * Todo trabajo urgente require de un <span>50% adicional</span> </p>
                 </div>
             </div>
         </div>
@@ -102,7 +106,7 @@
         <p class="text-center">¡CONTÁCTENOS!</p>
         <div class="d-flex justify-content-center align-items-center">
             <img src="images/Insta_1.png" class="img-fluid" alt="">
-            <img src="images/Insta_2.png" class="img-fluid mx-2" alt="">
+            <img src="images/insta_2.png" class="img-fluid mx-2" alt="">
             <img src="images/Insta_3.png" class="img-fluid" alt="">
         </div>
     </section>
