--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <img src="images/Logo.png" class="logo mx-auto my-5 d-block" width="" alt="">
         <hr>
         <div class="redes d-flex justify-content-around align-items-center my-3">
-            <a href=""><img src="images/Whatsapp.svg" alt=""></a>
-            <a href=""><img src="images/Phone.svg" alt=""></a>
-            <a href=""><img src="images/Mail.svg" alt=""></a>
-            <a href=""><img src="images/Instagram.svg" alt=""></a>
+            <a href="https://api.whatsapp.com/send?phone=5529576344"><img src="images/Whatsapp.svg" alt=""></a>
+            <a href="tel:5572629721"><img src="images/Phone.svg" alt=""></a>
+            <a href="mailto:magnodent@yahoo.com.mx"><img src="images/Mail.svg" alt=""></a>
+            <a href="https://www.instagram.com/magnodent_lab/"><img src="images/Instagram.svg" alt=""></a>
         </div>
         <p>30 AÑOS DE EXPERIENCIA NOS AVALAN</p>
     </section>
@@ -114,20 +114,20 @@
     <footer class="mt-5">
         <div class="contact">
             <div class="item mb-3">
-                <a href=""><img src="images/Instagram.svg" alt=""></a>
-                <a href="">@magnodent_lab</a>
+                <a href="https://www.instagram.com/magnodent_lab/"><img src="images/Instagram.svg" alt=""></a>
+                <a href="https://www.instagram.com/magnodent_lab/">@magnodent_lab</a>
             </div>
             <div class="item">
-                <a href=""><img src="images/Whatsapp.svg" alt=""></a>
-                <a href="">55 2957 6344</a>
+                <a href="https://api.whatsapp.com/send?phone=5529576344"><img src="images/Whatsapp.svg" alt=""></a>
+                <a href="https://api.whatsapp.com/send?phone=5529576344">55 2957 6344</a>
             </div>
             <div class="item my-3">
-                <a href=""><img src="images/Phone.svg" alt=""></a>
-                <a href="">(+52)55 7262 9721</a>
+                <a href="tel:5572629721"><img src="images/Phone.svg" alt=""></a>
+                <a href="tel:5572629721">(+52)55 7262 9721</a>
             </div>
             <div class="item">
-                <a href=""><img src="images/Mail.svg" alt=""></a>
-                <a href="">magnodent@yahoo.com.mx</a>
+                <a href="mailto:magnodent@yahoo.com.mx"><img src="images/Mail.svg" alt=""></a>
+                <a href="mailto:magnodent@yahoo.com.mx">magnodent@yahoo.com.mx</a>
             </div>
         </div>
         <div class="firma">
