--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 
 <body>
-    <section class="home d-flex flex-column justify-content-center align-items-center px-2 px-md-0 pt-5">
+    <section class="home d-flex flex-column justify-content-center align-items-center px-2 px-md-0 pt-3">
         <img src="images/Logo.png" class="logo mx-auto my-5 d-block" width="" alt="">
         <hr>
         <div class="redes d-flex justify-content-around align-items-center my-3">
-            <a href="https://api.whatsapp.com/send?phone=5529576344"><img src="images/Whatsapp.svg" alt=""></a>
+            <a href="https://api.whatsapp.com/send?phone=+5215529576344"><img src="images/Whatsapp.svg" alt=""></a>
             <a href="tel:5572629721"><img src="images/Phone.svg" alt=""></a>
             <a href="mailto:magnodent@yahoo.com.mx"><img src="images/Mail.svg" alt=""></a>
             <a href="https://www.instagram.com/magnodent_lab/"><img src="images/Instagram.svg" alt=""></a>
@@ -50,14 +50,13 @@
                     <h4>ORTODONCIA</h4>
                     <div class="item">
                         <p> Placa Howley <br> (Sin tornillo)</p><span>$350</span>
-
                         <p> Guarda nocturna </p><span>$350</span>
                     </div>
                 </div>
                 <div class="mt-3">
                     <h4>PROSTODONCIA</h4>
                     <div class="item">
-                        <p> Placa total </p><span>$1200</span>
+                        <p>Placa total </p><span>$1200</span>
                         <p>Placa total Lucitone </p><span>$1400</span>
                         <p>Placa con acrilico de alto impacto </p><span>$350</span>
                         <p>Rebase </p><span>$400</span>
@@ -77,7 +76,7 @@
                     <div class="item">
                         <p>Corona porcelana </p><span>$$450</span>
                         <p>Corona libre de metal </p><span>$1400</span>
-                        <p>(E Max)</p><span></span>
+                        <span class="list-none">(E Max)</span><span></span>
                         <p>Corona con núcleo de zirconia </p><span>$1500</span>
                         <p>Jacket provisional </p><span>$100</span>
                         <p>Jacket definitivo </p><span>$220</span>
@@ -112,14 +111,14 @@
     </section>
 
     <footer class="mt-5">
-        <div class="contact">
+        <div class="contact mb-5">
             <div class="item mb-3">
                 <a href="https://www.instagram.com/magnodent_lab/"><img src="images/Instagram.svg" alt=""></a>
                 <a href="https://www.instagram.com/magnodent_lab/">@magnodent_lab</a>
             </div>
             <div class="item">
-                <a href="https://api.whatsapp.com/send?phone=5529576344"><img src="images/Whatsapp.svg" alt=""></a>
-                <a href="https://api.whatsapp.com/send?phone=5529576344">55 2957 6344</a>
+                <a href="https://api.whatsapp.com/send?phone=+5215529576344"><img src="images/Whatsapp.svg" alt=""></a>
+                <a href="https://api.whatsapp.com/send?phone=+5215529576344">55 2957 6344</a>
             </div>
             <div class="item my-3">
                 <a href="tel:5572629721"><img src="images/Phone.svg" alt=""></a>
